# PowerTrak

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  ROADMAP.md  powertrak.db  pyproject.toml  test_sanity.py
.github/workflows/: ci.yml
powertrak/: cli.py  config.py  database.py  db.py
powertrak/models/: __iniy__.py  customer.py  equipment.py  job.py
scripts/: init_db.py  reset_db.py  seed_data.py
