[tool.poetry]
packages = [{include = "powertrak"}]
name = "powertrak"
version = "0.1.0"
description = "A desktop application for managing customers, equipment, jobs, and schedules in a repair shop."
authors = ["Mark Breza <brezafamilyfarm@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
ttkbootstrap = "^1.10.0"
sqlmodel = "^0.0.14"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
PyQt5 = "^5.15"   

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.4.7"
isort = "^5.13.2"
pyupgrade = "^3.15.0"
pytest = "^8.2.1"
pytest-qt = "^4.2.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

